# markdownweb

./: .gitignore  .justfile  Cargo.toml  Dockerfile  README.md  config.sample.yml  config.yml  docker-compose.yml  sample.env
assets/css/: style.css
assets/js/: theme.js
src/: main.rs
src/http/: estatic.rs  mod.rs
src/models/: config.rs  index.rs  metadata.rs  mod.rs  page.rs  pageerror.rs  site.rs
src/models/publishers/: mastodon.rs  mod.rs  publisher.rs  telegram.rs
src/utils/: generator.rs  mod.rs  replicator.rs
templates/: base.html  default.html  disqus.html  error.html  header.html  index.html  meta.html  page.html  svg-icons.html  vars.html
templates/partials/: base.html  footer.html  head.html  header.html  main.html  navbar.html  navbar_items.html  opengraph.html  structured_data_markup.html  summary.html  twitter_cards.html
templates/svgs/: svgs.html  svgs.html.bak
