[package]
name = "markdownweb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
notify = "7.0.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full", "time"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }

[dev-dependencies]
dotenv = "0.15.0"
