[package]
name = "markdownweb"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.1.1"
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.0"
gray_matter = "0.2.8"
minijinja = { version = "2.5.0", features = ["loader"] }
notify = "7.0.0"
once_cell = "1.20.2"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
slug = "0.1.6"
tokio = { version = "1.42.0", features = ["full", "time"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "fs", "normalize-path"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }

[dev-dependencies]
dotenv = "0.15.0"
